--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo.png">
   <link rel="stylesheet" href="./style.css">
-
-  <!-- Calculator Code -->
-  <script defer type="text/javascript" src="./index.js"></script>
   
+    <!-- Calculator Code -->
+    <script defer type="text/javascript" src="./index.js"></script>
+    
   <!-- Mathquill, JQuery and Nerdamer-->
   <link rel="stylesheet" href="./dependencies/mathquill.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script no-defer src="./dependencies/mathquill.js"></script>
+  <script defer onload="startMathQuill()" src="./dependencies/mathquill.js"></script>
   <script src="./dependencies/all.min.js"></script>
+
   
   <title>Derivatives Calculator (LaTeX rendering)</title>
 
@@ -56,7 +57,7 @@
       </div>
 
       <!-- If expression has more than one variable, ask for which variable to derive -->
-      <div class="second-input">
+      <div id="second-input" class="second-input">
         <h2>For which variable to solve? </h2> 
         <input id="input2" class="input-value" placeholder="Variable">
       </div>
